[gd_scene load_steps=10 format=2]

[ext_resource path="res://prefebs/Planets/planetManneger.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefebs/Planets/Asteroids/NoAtmosphere.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefebs/Planets/NoAtmosphere/NoAtmosphere.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefebs/Planets/Asteroids/Asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefebs/objetos_bg/satelite_obitando.tscn" type="PackedScene" id=5]
[ext_resource path="res://grafica/background/nebulosa.png" type="Texture" id=7]
[ext_resource path="res://grafica/background/sujeiraEspacial.png" type="Texture" id=8]
[ext_resource path="res://prefebs/ParallaxBackground.gd" type="Script" id=9]
[ext_resource path="res://grafica/skay3.png" type="Texture" id=10]

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource( 9 )

[node name="terceiro" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 1, 0.05 )
motion_mirroring = Vector2( 0, 1280 )

[node name="ColorRect" type="ColorRect" parent="terceiro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 358.0
margin_bottom = 667.0
color = Color( 0.00392157, 0.00784314, 0.0588235, 1 )

[node name="Skay3" type="Sprite" parent="terceiro"]
position = Vector2( 355, 2535.52 )
scale = Vector2( 1.24, 1.24 )
texture = ExtResource( 10 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 1, 0.06 )
motion_mirroring = Vector2( 0, 1726 )

[node name="Nebulosa" type="Sprite" parent="ParallaxLayer"]
modulate = Color( 0.0784314, 0.0745098, 0.266667, 1 )
position = Vector2( 356.5, 639 )
scale = Vector2( 3.44907, 3.32817 )
texture = ExtResource( 7 )

[node name="terceiro2" type="ParallaxLayer" parent="."]
modulate = Color( 0.47451, 0.47451, 0.694118, 1 )
motion_scale = Vector2( 1, 0.1 )
motion_mirroring = Vector2( 0, 1280 )

[node name="NoAtmosphere3" parent="terceiro2" instance=ExtResource( 3 )]
modulate = Color( 0.223529, 0.211765, 0.317647, 1 )
margin_left = 111.0
margin_top = 966.0
margin_right = 211.0
margin_bottom = 1066.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Nebulosa" type="Sprite" parent="terceiro2"]
modulate = Color( 0.603922, 0.580392, 0.803922, 0.627451 )
position = Vector2( 367, 641 )
texture = ExtResource( 8 )

[node name="planet" type="ParallaxLayer" parent="."]
modulate = Color( 0.054902, 0.0862745, 0.188235, 1 )
motion_scale = Vector2( 1, 0 )

[node name="planetManneger" parent="planet" instance=ExtResource( 1 )]

[node name="quarto" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 1, 1.3 )
motion_mirroring = Vector2( 0, 6000 )

[node name="Node2D" parent="quarto" instance=ExtResource( 5 )]

[node name="segundo" type="ParallaxLayer" parent="."]
modulate = Color( 0.0901961, 0.113725, 0.215686, 1 )
motion_scale = Vector2( 1, 0.3 )
motion_mirroring = Vector2( 0, 2240 )

[node name="NoAtmosphere2" parent="segundo" instance=ExtResource( 2 )]
margin_left = 190.0
margin_top = 271.0
margin_right = 290.0
margin_bottom = 371.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="NoAtmosphere3" parent="segundo" instance=ExtResource( 2 )]
margin_left = 469.0
margin_top = 983.0
margin_right = 569.0
margin_bottom = 1083.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Asteroid" parent="segundo" instance=ExtResource( 4 )]
margin_left = 68.0
margin_top = 102.0
margin_right = 168.0
margin_bottom = 202.0

[node name="Asteroid2" parent="segundo" instance=ExtResource( 4 )]
margin_left = 199.0
margin_top = 580.0
margin_right = 299.0
margin_bottom = 680.0
rect_scale = Vector2( 1.00262, 1 )

[node name="Asteroid3" parent="segundo" instance=ExtResource( 4 )]
margin_left = 373.0
margin_top = 1535.0
margin_right = 473.0
margin_bottom = 1635.0
rect_scale = Vector2( 0.720001, 0.720001 )

[connection signal="new_planet" from="." to="." method="_on_ParallaxBackground_new_planet"]
